src/test/ui/issues/issue-62554.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-62554.rs:6:89
   |
LL | fn foo(u: u8) { if u8 macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
   |               -                       -         -                  -                  - ^
   |               |                       |         |                  |                  |
   |               |                       |         |                  |                  unclosed delimiter
   |               |                       |         |                  unclosed delimiter
   |               |                       |         unclosed delimiter
   |               unclosed delimiter      unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-62554.rs:6:89
   |
LL | fn foo(u: u8) { if u8 macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
   |               -                       -         -                  -                  - ^
   |               |                       |         |                  |                  |
   |               |                       |         |                  |                  unclosed delimiter
   |               |                       |         |                  unclosed delimiter
   |               |                       |         unclosed delimiter
   |               unclosed delimiter      unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-62554.rs:6:89
   |
LL | fn foo(u: u8) { if u8 macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
   |               -                       -         -                  -                  - ^
   |               |                       |         |                  |                  |
   |               |                       |         |                  |                  unclosed delimiter
   |               |                       |         |                  unclosed delimiter
   |               |                       |         unclosed delimiter
   |               unclosed delimiter      unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-62554.rs:6:89
   |
LL | fn foo(u: u8) { if u8 macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
   |               -                       -         -                  -                  - ^
   |               |                       |         |                  |                  |
   |               |                       |         |                  |                  unclosed delimiter
   |               |                       |         |                  unclosed delimiter
   |               |                       |         unclosed delimiter
   |               unclosed delimiter      unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-62554.rs:6:89
   |
LL | fn foo(u: u8) { if u8 macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
   |               -                       -         -                  -                  - ^
   |               |                       |         |                  |                  |
   |               |                       |         |                  |                  unclosed delimiter
   |               |                       |         |                  unclosed delimiter
   |               |                       |         unclosed delimiter
   |               unclosed delimiter      unclosed delimiter

error: expected `{`, found `macro_rules`
  --> $DIR/issue-62554.rs:6:23
   |
LL | fn foo(u: u8) { if u8 macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
   |                 --    ^^^^^^^^^^^ expected `{`
   |                 |
   |                 this `if` expression has a condition, but no block
   |
help: try placing this code inside a block
   |
LL | fn foo(u: u8) { if u8 { macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
LL |  }
   |

error: aborting due to 6 previous errors

